--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+    <link rel="stylesheet" href="styles.css">
+<style>
+.mycontainer {display: flex;}
+.mycontainer > div {width:33%;}
+body {background-color: #e3fa98;font-family: verdana; font-size: 300%;
+</style>
     <meta charset="utf-8"/>
-    <title>Tony Teaches Tech</title>
+    <title>Elena Montalvo Project website main page</title>
 </head>
 <body>
-<h1>GitHub Pages Website Tutorial</h1>
-<p>Hey, thanks for stopping by! You most likely came here after watching my GitHub Pages website video. If so, leave a comment on the video!</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/o5g-lUuFgpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>-<a href="https://tonyteaches.tech" target="_blank">Tony Teaches Tech</a></p>
+<div class="mycontainer">
+    <div>
+        <h1>Elena Montalvo</h1>
+        <blockquote> using technology to make the work a better place. </blockquote>
+        <p>contact me button<p>
+        <p>-<a href="https://tonyteaches.tech" target="_blank">Tony Teaches Tech</a></p>
+    </div>
+
+    <div>
+        <p>-<a href="https://tonyteaches.tech" target="_blank">slide show dor values</a></p>
+    </div>
+
+
+    
+</div>
+    
 </body>
+   
 </html>
