--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head> 
     <link rel="stylesheet" href="styles.css">
 <style>
-.mycontainer {display: flex;}
-.mycontainer > div {width:33%;}
+div.mycontainer{width:33%;display: flex;}
+
+div.gallery {margin: 5px; border: 1px solid #ccc; float: left; width: 25%;}
+div.gallery:hover {border: 1px solid #777;}
+div.gallery img {width: 100%;height: auto;}
+div.desc {padding: 15px;text-align: center;}
+
 body {background-color: #e3fa98;font-family: verdana; font-size: 100%;
 </style>
     <meta charset="utf-8"/>
@@ -17,11 +22,39 @@ body {background-color: #e3fa98;font-family: verdana; font-size: 100%;
         <blockquote> using technology to make the work a better place. </blockquote>
         <p>contact me button<p>
         <p>-<a href="https://tonyteaches.tech" target="_blank">Tony Teaches Tech</a></p>
+        <button href="https://tonyteaches.tech">Contact me</button>
     </div>
 
     <div>
-        <p>-<a href="https://tonyteaches.tech" target="_blank">slide show dor values</a></p>
+        <p>slide show dor values</a></p>
     </div>
+</div>
+    <div class="gallery">
+  <a target="_blank" href="img_5terre.jpg">
+    <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="img_forest.jpg">
+    <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="img_lights.jpg">
+    <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="img_mountains.jpg">
+    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">Add a description of the image here</div>
 </div>
 </body>
 </html>
