--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <link rel="stylesheet" href="styles.css">
 <style>
-div.mycontainer{width:33%;display: flex;}
+div.mycontainer{width:50%; display: flex;  margin: auto;}
 
 div.gallery {margin: 5px; border: 1px solid #ccc; float: left; width: 25%;}
 div.gallery:hover {border: 1px solid #777;}
