--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ div.gallery:hover {border: 1px solid #777;}
 div.gallery img {width: 100%;height: auto;}
 div.desc {padding: 15px;text-align: center;}
 
-body {background-color: #e3fa98;font-family: verdana; font-size: 100%;
+body {background-color: #708654;font-family: Georgia; font-size: 100%;
 </style>
     <meta charset="utf-8"/>
     <title>Elena Montalvo Project website main page</title>
