--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
     
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
+    <link rel="stylesheet" href="mystyle.css">
 <style>
 div.mycontainer{width:50%; display: flex;  margin: auto;}
 
