--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ padding: 16px 32px;text-decoration: none;margin: 4px 2px;cursor: pointer;
 img {vertical-align: middle;}
 
 /* Slideshow container */
-.slideshow-container {max-width: 1000px; position: relative;  margin: auto;}
+.slideshow-container {width:50%; display: flex;position: relative;  margin: auto;}
 
 /* Caption text */
 .text {color: #f2f2f2; font-size: 15px;padding: 8px 12px;position: absolute;bottom: 8px;width: 100%;text-align: center;}
