--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <style>
 <!-- level one display setting -->
 div.mycontainer{width:50%; display: flex;  margin: auto;}
+body {background-color: white ;font-family: Georgia; font-size: 100%;}
 
 <!-- buttom -->
 input[type=button], input[type=submit], input[type=reset] {background-color: #04AA6D; border: none; color: white;
@@ -39,15 +40,14 @@ img {vertical-align: middle;}
 
 
 
-
+<!-- 
     
 div.gallery {margin: 5px; border: 1px solid #ccc; float: left; width: 25%;}
 div.gallery:hover {border: 1px solid #777;}
 div.gallery img {width: 100%;height: auto;}
 div.desc {padding: 15px;text-align: center;}
-
+ -->
     
-body {background-color: white ;font-family: Georgia; font-size: 100%;
 </style>
     <meta charset="utf-8"/>
     <title>Elena Montalvo Project website main page</title>
