--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ body {background-color: white ;font-family: Georgia; font-size: 100%;}
 input[type=button], input[type=submit], input[type=reset] {background-color: #04AA6D; border: none; color: white;
 padding: 16px 32px; text-decoration: none; margin: 4px 2px; cursor: pointer;
 
-
 .mySlides{display: none;} 
 img {vertical-align: middle;}
 
@@ -38,14 +37,13 @@ img {vertical-align: middle;}
 
 
 
-<!-- 
+/* On smaller screens 
     
 div.gallery {margin: 5px; border: 1px solid #ccc; float: left; width: 25%;}
 div.gallery:hover {border: 1px solid #777;}
 div.gallery img {width: 100%;height: auto;}
 div.desc {padding: 15px;text-align: center;}
- -->
-    
+    , decrease text size */
 </style>
     <meta charset="utf-8"/>
     <title>Elena Montalvo Project website main page</title>
@@ -113,7 +111,7 @@ div.desc {padding: 15px;text-align: center;}
 
     <br>
 
-
+/* On smaller screens, decrease text size
     <div class="gallery">
   <a target="_blank" href="img_5terre.jpg">
     <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
@@ -140,6 +138,6 @@ div.desc {padding: 15px;text-align: center;}
     <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div>
+</div> */
 </body>
 </html>
