--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 <!-- level one display setting -->
-div.mycontainer{width:50%; display: flex;  margin: auto;}
-body {background-color: white ;font-family: Georgia; font-size: 100%;}
+div.mycontainer{width:45%; float:left;  margin: auto;}
+body{background-color: white ;font-family: Georgia; font-size: 100%;}
 
 input[type=button], input[type=submit], input[type=reset] {background-color: #04AA6D; border: none; color: white;
 padding: 16px 32px; text-decoration: none; margin: 4px 2px; cursor: pointer;
@@ -14,7 +14,7 @@ padding: 16px 32px; text-decoration: none; margin: 4px 2px; cursor: pointer;
 img {vertical-align: middle;}
 
 /* Slideshow container */
-.slideshow-container {width:50%; display: flex; position: relative;  margin: auto;}
+.slideshow-container {width:45%; float:left; ;  margin: auto;}
 
 /* Caption text */
 .text {color: #f2f2f2; font-size: 15px;padding: 8px 12px;position: absolute;bottom: 8px;width: 100%;text-align: center;}
