--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 <!-- level one display setting -->
-div.mycontainer{width:45%; float:left;  margin: auto;}
+div.mycontainer{width:45%; float:left;  margin: auto;width:1000px}
 body{background-color: white ;font-family: Georgia; font-size: 100%;}
 
 input[type=button], input[type=submit], input[type=reset] {background-color: #04AA6D; border: none; color: white;
