--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		function showSlides() {
 			let i;
 			let slides = document.getElementsByClassName("mySlides");
-			let dots = document.getElementsByClassName("dot");
+			//let dots = document.getElementsByClassName("dot");
 		for (i = 0; i < slides.length; i++) {
 			slides[i].style.display = "none";  
 		}
