--- a/index.html
+++ b/index.html
@@ -1,89 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 	body{background-color: white ;font-family: fantasy; font-size: 100%;}
 	.center{position:relative;top:60%;width:100%;text-align:center;}
 	
 	div.mycontainer1 {width:100%;overflow:auto;}
-	div.mycontainer1 div {width:50%;float:left;height:500px}
-	
+	div.mycontainer1 div {width:50%;float:left;height:300px}
+	div.mycontainer2 {width:100%;overflow:auto;}
+	div.mycontainer2 div {width:33%;float:left;color: #f2f2f2}
 	input[type=button], input[type=submit], input[type=reset] {background-color: #04AA6D; border: none; color: white;
 	padding: 16px 32px; text-decoration: none; margin: 4px 2px; cursor: pointer;}
-	.mySlides{display: none;} 
+	
+	.mySlides {display: none;}
 	img {vertical-align: middle;}
-	.slideshow-container {position:relative;width:20%;}
-	.text {color: #f2f2f2; font-size: 15px;padding: 8px 12px;position: relative;bottom: 8px;width: 100%;text-align: center;}
-	.numbertext {color: #f2f2f2;font-size: 12px;padding: 8px 12px;position: relative;top: 0;}
-	.dot{height: 15px; width: 15px;margin: 0 2px; background-color: #bbb;border-radius: 50%;display: inline-block;transition: background-color 0.6s ease;}
-	.active {background-color: #717171;}
-	.fade {animation-name: fade; animation-duration: 4s;}
-	@keyframes fade {from {opacity: .4} to {opacity: 1}}
-	@media only screen and (max-width: 300px) {.text {font-size: 11px}}
-	
-	
-	
-	div.mycontainer2 {width:100%;overflow:auto;}
-	div.mycontainer2 div {width:20%;float:left;}
-</style>
-    <meta charset="utf-8"/>
-    <title>Elena Montalvo Project website main page</title>
-</head>
 
+	/* Slideshow container */
+	.slideshow-container {max-width:1000px;position: relative;text-align:center;}
+
+	/* Caption text */
+	.text {color: #f2f2f2;font-size: 15px;padding: 8px 12px;position: absolute;bottom: 8px;width: 100%;text-align: center;}
+
+	/* Number text (1/3 etc) */
+	.numbertext {color: #f2f2f2;font-size: 12px;padding: 8px 12px;position: absolute;top: 0;}
+
+	/* The dots/bullets/indicators */
+	.dot {height: 15px;width: 15px;margin: 0 2px;background-color: #bbb;border-radius: 50%;display: inline-block;transition: background-color 0.6s ease;}
+
+	.active {background-color: #717171;}
+
+	/* Fading animation */
+	.fade {animation-name: fade;animation-duration: 1.5s;}
+
+	@keyframes fade {from {opacity: .4}to {opacity: 1}}
+
+	/* On smaller screens, decrease text size */
+	@media only screen and (max-width: 300px) {.text {font-size: 11px}}	
+</style>
+<head>
+
+</head>
 <body>
-	<div class="mycontainer1">
-		<div class="center">
-			<h1>Elena Montalvo</h1>
-			<blockquote> using technology to make the work a better place. </blockquote>
-			<input type="button" value="Contact Me!">
-		</div>
-		
+<div class="mycontainer1">
+
+	<div class="center" style="background-color:white;">
+	  <h1>Elena Montalvo</h1>
+      <blockquote> using technology to make the work a better place. </blockquote>
+      <input type="button" value="Contact Me!">
+	</div>
 		<div class="slideshow-container">
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
-				<img src="creativity.png">
+				<img src="adventure.png" style="width:100%">
 				<div class="text">Caption Text</div>
 			</div>
-			
+
 			<div class="mySlides fade">
 				<div class="numbertext">2 / 3</div>
-				<img src="community.png">
+				<img src="community.png" style="width:100%">
 				<div class="text">Caption Two</div>
 			</div>
-			
+
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 3</div>
-				<img src="adventure.png">
+				<img src="creativity.png" style="width:100%">
 				<div class="text">Caption Three</div>
 			</div>
+			
 		</div>
-	</div>	
-	<script>
-		let slideIndex = 0;
-		showSlides();
 		
-		function showSlides() {
-			let i;
-			let slides = document.getElementsByClassName("mySlides");
-			//let dots = document.getElementsByClassName("dot");
+</div>
+
+<br>
+	  <h1 class="center" >Projects</h1>
+<div class="mycontainer2">
+
+	<div class="center"  style="background-color:#04AA6D"; >
+	  <h2> <a href="https://github.com/kyobg/HOOF-IMU">Senior Project</a></h2>
+	</div>
+
+	<div class="center" style="background-color:#04AA66"; >
+	  <h2> <a href="https://github.com/evolutis101/Evaluating-Performance-of-Hardware-using-Computer-Vision-">Computer Vision Project</a></h2>
+	</div>
+	
+	<div class="center" style="background-color:#04AA6D"; >
+	 <h2> <a  href="https://github.com/evolutis101/ROS_Cordinate_Transformation" >ROS:Robotic Operation System</a></h2>
+	</div>
+
+</div>
+<div  class="mycontainer2">
+
+	<div class="center" style="background-color:#04AA6D"; >
+	  <h2> <a href="https://github.com/evolutis101/RFID-Security-System">Security System</a></h2>
+	</div>
+	
+	<div href="" class="center" style="background-color:#04AA6D"; >
+	  <h2> <a> VBA</a></h2>
+	</div>
+	
+	<div class="center" style="background-color:#04AA6D"; >
+	  <h2> <a href="https://github.com/Spring-2023-Classes" >Verilog</a></h2>
+	</div>
+	
+</div> 
+
+<div class="mycontainer2">
+
+	<div href="" class="center" style="background-color:#04AA6D"; >
+	  <h2> <a> Matlab</a></h2>
+	</div>
+	
+	<div href="" class="center" style="background-color:#04AA6D"; >
+	  <h2> <a> Altium</a></h2>
+	</div>
+	
+	<div class="center" style="background-color:#04AA6D"; >
+	  <h2> <a> Random Extra Projects</a></h2>
+	</div>
+	
+</div> 
+	<script>
+	let slideIndex = 0;
+	showSlides();
+
+	function showSlides() {
+		let i;
+		let slides = document.getElementsByClassName("mySlides");
+		//let dots = document.getElementsByClassName("dot");
 		for (i = 0; i < slides.length; i++) {
-			slides[i].style.display = "none";  
+		slides[i].style.display = "none";  
 		}
-			slideIndex++;
+		slideIndex++;
 		if (slideIndex > slides.length) {slideIndex = 1}    
-		for (i = 0; i < dots.length; i++) {
-			dots[i].className = dots[i].className.replace(" active", "");
-		}
-			slides[slideIndex-1].style.display = "block";  
-			dots[slideIndex-1].className += " active";
-			setTimeout(showSlides, 2000); // Change image every 2 seconds
-		}
-	</script>		
-        
+		//for (i = 0; i < dots.length; i++) {
+		//dots[i].className = dots[i].className.replace(" active", "");
+		//}
+		slides[slideIndex-1].style.display = "block";  
+		//dots[slideIndex-1].className += " active";
+		setTimeout(showSlides, 3000); // Change image every 2 seconds
+	}
+	</script>
 
-    
-
-
-</body>
+</body
 </html>
