--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	.center{position:relative;top:60%;width:100%;text-align:center;}
 	
 	div.mycontainer1 {width:100%;overflow:auto;}
-	div.mycontainer1 div {width:50%;float:left;height:300px}
+	div.mycontainer1 div {width:50%;float:left;}
 	div.mycontainer2 {width:100%;overflow:auto;}
 	div.mycontainer2 div {width:33%;float:left;color: #f2f2f2}
 	input[type=button], input[type=submit], input[type=reset] {background-color: #04AA6D; border: none; color: white;
@@ -90,7 +90,7 @@
 </div>
 <div  class="mycontainer2">
 
-	<div class="center" style="background-color:#04AA6D"; >
+	<div class="center" style="background-color:#04AA66"; >
 	  <h2> <a href="https://github.com/evolutis101/RFID-Security-System">Security System</a></h2>
 	</div>
 	
@@ -98,7 +98,7 @@
 	  <h2> <a> VBA</a></h2>
 	</div>
 	
-	<div class="center" style="background-color:#04AA6D"; >
+	<div class="center" style="background-color:#04AA66"; >
 	  <h2> <a href="https://github.com/Spring-2023-Classes" >Verilog</a></h2>
 	</div>
 	
@@ -110,7 +110,7 @@
 	  <h2> <a> Matlab</a></h2>
 	</div>
 	
-	<div href="" class="center" style="background-color:#04AA6D"; >
+	<div href="" class="center" style="background-color:#04AA66"; >
 	  <h2> <a> Altium</a></h2>
 	</div>
 	
@@ -141,5 +141,5 @@
 	}
 	</script>
 
-</body
+</body>
 </html>
