--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	div.mycontainer1 div {width:50%;float:left;}
 	div.mycontainer2 {width:100%;overflow:auto;}
 	div.mycontainer2 div {width:33%;float:left;color: #f2f2f2}
-	input[type=button], input[type=submit], input[type=reset] {background-color: #04AA6D; border: none; color: white;
+	input[type=button], input[type=submit], input[type=reset] {background-color: #78BE21; border: none; color: white;
 	padding: 16px 32px; text-decoration: none; margin: 4px 2px; cursor: pointer;}
 	
 	.mySlides {display: none;}
@@ -75,7 +75,7 @@
 	  <h1 class="center" >Projects</h1>
 <div class="mycontainer2">
 
-	<div class="center"  style="background-color:#04AA6D"; >
+	<div class="center"  style="background-color:#78BE21"; >
 	  <h2> <a href="https://github.com/kyobg/HOOF-IMU">Senior Project</a></h2>
 	</div>
 
@@ -83,7 +83,7 @@
 	  <h2> <a href="https://github.com/evolutis101/Evaluating-Performance-of-Hardware-using-Computer-Vision-">Computer Vision Project</a></h2>
 	</div>
 	
-	<div class="center" style="background-color:#04AA6D"; >
+	<div class="center" style="background-color:#78BE21"; >
 	 <h2> <a  href="https://github.com/evolutis101/ROS_Cordinate_Transformation" >ROS:Robotic Operation System</a></h2>
 	</div>
 
@@ -94,7 +94,7 @@
 	  <h2> <a href="https://github.com/evolutis101/RFID-Security-System">Security System</a></h2>
 	</div>
 	
-	<div href="" class="center" style="background-color:#04AA6D"; >
+	<div href="" class="center" style="background-color:#78BE21"; >
 	  <h2> <a> VBA</a></h2>
 	</div>
 	
@@ -106,7 +106,7 @@
 
 <div class="mycontainer2">
 
-	<div href="" class="center" style="background-color:#04AA6D"; >
+	<div href="" class="center" style="background-color:#78BE21"; >
 	  <h2> <a> Matlab</a></h2>
 	</div>
 	
@@ -114,7 +114,7 @@
 	  <h2> <a> Altium</a></h2>
 	</div>
 	
-	<div class="center" style="background-color:#04AA6D"; >
+	<div class="center" style="background-color:#78BE21"; >
 	  <h2> <a> Random Extra Projects</a></h2>
 	</div>
 	
