--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	  <h2> <a href="https://github.com/kyobg/HOOF-IMU">Senior Project</a></h2>
 	</div>
 
-	<div class="center" style="background-color:#04AA66"; >
+	<div class="center" style="background-color:#a0d162"; >
 	  <h2> <a href="https://github.com/evolutis101/Evaluating-Performance-of-Hardware-using-Computer-Vision-">Computer Vision Project</a></h2>
 	</div>
 	
@@ -90,7 +90,7 @@
 </div>
 <div  class="mycontainer2">
 
-	<div class="center" style="background-color:#04AA66"; >
+	<div class="center" style="background-color:#a0d162"; >
 	  <h2> <a href="https://github.com/evolutis101/RFID-Security-System">Security System</a></h2>
 	</div>
 	
@@ -98,7 +98,7 @@
 	  <h2> <a> VBA</a></h2>
 	</div>
 	
-	<div class="center" style="background-color:#04AA66"; >
+	<div class="center" style="background-color:#a0d162"; >
 	  <h2> <a href="https://github.com/Spring-2023-Classes" >Verilog</a></h2>
 	</div>
 	
@@ -110,7 +110,7 @@
 	  <h2> <a> Matlab</a></h2>
 	</div>
 	
-	<div href="" class="center" style="background-color:#04AA66"; >
+	<div href="" class="center" style="background-color:#a0d162"; >
 	  <h2> <a> Altium</a></h2>
 	</div>
 	
