--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <style>
 	body{background-color: white ;font-family: fantasy; font-size: 100%;}
+	a{color:white}
 	.center{position:relative;top:60%;width:100%;text-align:center;}
 	
 	div.mycontainer1 {width:100%;overflow:auto;}
