--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 	<div class="center" style="background-color:white;">
 	  <h1>Elena Montalvo</h1>
-      <blockquote> using technology to make the work a better place. </blockquote>
+      <blockquote> <i> Hello everyone, I'm Elena Montalvo, and I'm currently Graduated with electrical engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
+	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.<i></blockquote>
       <input type="button" value="Contact Me!">
 	</div>
 		<div class="slideshow-container">
