--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 	<div class="center" style="background-color:white;">
 	  <h1>Elena Montalvo</h1>
       <blockquote> <i> Hello everyone, I'm Elena Montalvo, and I'm currently Graduated with electrical engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
-	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.<i></blockquote>
+	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.</i>i></blockquote>
       <input type="button" value="Contact Me!">
+	<input type="button" value="Resume">
 	</div>
 		<div class="slideshow-container">
 			<div class="mySlides fade">
