--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
 	<div class="center" style="background-color:white;">
 	  <h1>Elena Montalvo</h1>
-      <blockquote> <i> Hello everyone, I'm Elena Montalvo, and I'm currently Graduated with electrical engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
-	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.</i>i></blockquote>
+      <p max-width: 200px> <i> Hello Everyone, I'm just graduated with a Bachalors in Electrical Engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
+	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.</i></p>
       <input type="button" value="Contact Me!">
-	<input type="button" value="Resume">
+	<input url="https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true" type="button" value="Resume">
 	</div>
 		<div class="slideshow-container">
 			<div class="mySlides fade">
