--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 	@media only screen and (max-width: 300px) {.text {font-size: 11px}}	
 </style>
 <head>
-
+	<title>Elena Montalvo</title>
+	<!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> --> 
 </head>
 <body>
 <div class="mycontainer1">
