--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 	  <h1 font-size: 50px;>Elena Montalvo</h1>
       <p  font-size: 30px; max-width: 100px;> <i> Hello Everyone, I'm just graduated with a Bachalors in Electrical Engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
 	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.</i></p>
-      <input type="button" value="Contact Me!">
-	<input url="https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true" type="button" value="Resume">
+
+	<button onclick="window.location.href='https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true';">	
+		     Contact Me! </button>
+	<button onclick="window.location.href='https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true';">	
+		     Resume </button>
 	</div>
 		<div class="slideshow-container">
 			<div class="mySlides fade">
