--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 <style>
 	body{background-color: white ;font-family: fantasy; font-size: 100%;}
 	a{color:white}
-	.center{position:relative;top:60%;width:100%;text-align:center;}
+	.center{position:relative;vertical-align: middle;;width:100%;text-align:center;}
 	
 	div.mycontainer1 {width:100%;overflow:auto;}
 	div.mycontainer1 div {width:50%;float:left;}
 	div.mycontainer2 {width:100%;overflow:auto;}
 	div.mycontainer2 div {width:33%;float:left;color: #f2f2f2}
-	input[type=button], input[type=submit], input[type=reset] {background-color: #78BE21; border: none; color: white;
-	padding: 16px 32px; text-decoration: none; margin: 4px 2px; cursor: pointer;}
 	
 	.mySlides {display: none;}
 	img {vertical-align: middle;}
