--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>
 	body{background-color: white ;font-family: fantasy; font-size: 100%;}
 	a{color:white}
-	.center{position:relative;vertical-align: middle;width:100%;text-align:center;}
+	.center{position:relative;text-align: center; width:100%;text-align:center;}
 	
 	div.mycontainer1 {width:100%;overflow:auto;}
 	div.mycontainer1 div {width:50%;float:left;}
