--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <div class="mycontainer1">
 
 	<div class="center" style="background-color:white;">
-	  <h1 font-size: 50px;>Elena Montalvo</h1>
-      <p  font-size: 30px; max-width: 100px;> <i> Hello Everyone, I'm just graduated with a Bachalors in Electrical Engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
+	  <h1 font-size: xx-large;>Elena Montalvo</h1>
+      <p  font-size:large; max-width: 100px;> <i> Hello Everyone, I'm just graduated with a Bachalors in Electrical Engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
 	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.</i></p>
 
 	<button onclick="window.location.href='https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true';">	
