--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
 
 	<div class="center" style="background-color:white;">
 	  <h1 font-size: xx-large;>Elena Montalvo</h1>
-      <p  font-size:large; max-width: 100px;> <i> Hello Everyone, I'm just graduated with a Bachalors in Electrical Engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to play 
-	      a part in driving positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.</i></p>
+      <p  font-size:large; max-width: 100px;> <i> Hello Everyone, I'm just graduated with a Bachelor's in Electrical Engineering at California State Polytechnic University, Pomona. My choice of major stems from a profound desire to drive positive change in our world. I firmly believe that engineering is like a superpower that can be harnessed to make a real impact.</i></p>
 
 	<button onclick="window.location.href='https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true';">	
 		     Contact Me! </button>
 	<button onclick="window.location.href='https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true';">	
 		     Resume </button>
+	<button onclick="window.location.href='https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true';">	
+		    Linkedin </button>
+	<button onclick="window.location.href='https://docs.google.com/document/d/10mssi2Z3hBQALU_M525rLIQh3lK9Tdu7/edit?usp=sharing&ouid=109932766433844097514&rtpof=true&sd=true';">	
+		    GitHub Repository </button>
 	</div>
 		<div class="slideshow-container">
 			<div class="mySlides fade">
@@ -61,40 +64,36 @@
 			</div>
 
 			<div class="mySlides fade">
-				<div class="numbertext">2 / 3</div>
+				<div class="numbertext">2 / 6</div>
 				<img src="community.png" style="width:100%">
 				<div class="text">Caption Two</div>
 			</div>
 
 			<div class="mySlides fade">
-				<div class="numbertext">3 / 3</div>
+				<div class="numbertext">3 / 6</div>
 				<img src="creativity.png" style="width:100%">
 				<div class="text">Caption Three</div>
 			</div>
 
 			<div class="mySlides fade">
-				<div class="numbertext">1 / 3</div>
-				<img src="arduino.png" style="width:100%">
+				<div class="numbertext"> 4/ 6</div>
+				<img src="arduino.jpg" style="width:100%">
 				<div class="text">Caption Text</div>
 			</div>
 
 			<div class="mySlides fade">
-				<div class="numbertext">2 / 3</div>
-				<img src="Battery management system data.png" style="width:100%">
+				<div class="numbertext"> 5 / 6</div>
+				<img src="Battery management system data.jpg" style="width:100%">
 				<div class="text">Caption Two</div>
 			</div>
 
 			<div class="mySlides fade">
-				<div class="numbertext">3 / 3</div>
-				<img src="creativity.png" style="width:100%">
+				<div class="numbertext">6 / 6</div>
+				<img src="creativity.jpg" style="width:100%">
 				<div class="text">Caption Three</div>
 			</div>
 
-
-
-			
 		</div>
-		
 </div>
 
 <br>
