--- a/gallery.html
+++ b/gallery.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- Material Design Bootstrap -->
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet"> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <!-- Bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/venobox.css" type="text/css" media="screen">
-    <!-- <script defer src="js/lightbox.js"></script> -->
+    <script defer src="js/lightbox.js"></script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/7d98993169.js" crossorigin="anonymous"></script>
 
@@ -25,96 +25,39 @@
 <body>
     <div class="preloader"></div>
     <!-- LANDING PAGE HERO + NAVBAR -->
-    <div id="hero">
-        <nav>
-            <div class="logo">
-                <a href="index.html">
-                    <img class="logo2" src="assets/img/VOS_text_logo.png" alt="VOS Logo">
-                </a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#about-section">About</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="#contact-section">Contact</a></li>
+    <div id="gallery-hero2">
 
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </nav>
-        <!-- <div class="texture"></div> -->
-        <video loop muted playsinline autoplay preload="auto" src="assets/video/welcome.mp4">
-            <source src="assets/video/welcome.mp4" type="video/mp4">
-            </source>
-        </video>
-        <!-- <div class="caption">
-            <h1>Video Landing Page</h1>
-            <h2>Video Landing Page Subtitle</h2>
-        </div> -->
+        <div id="gallery-hero">
+            <nav class="gallery-page-nav">
+                <div class="logo">
+                    <a href="index.html">
+                        <img class="logo2" src="assets/img/VOS_text_logo.png" alt="VOS Logo">
+                    </a>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
+
+                </ul>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </nav>
+        </div>
     </div>
 
-    <!-- ABOUT US SECTION -->
-    <section id="about-section" class="section about-section-skewed">
-        <div class="container about-container-skewed">
-            <div class="text-center">
-                <!-- <h1 class="section-title">About VOS Films</h1> -->
-                <img src="assets/img/title_img/about.png" alt="" class="section-img-title">
-            </div>
-            <p class="section-text about-section-padding">
-                3 years ago when I was asked to shoot a bodybuilding show in the casino I had no idea where to even
-                start. But I still took on the opportunity… when it came to the day of the event I learned the in and
-                out through Youtube to be ready for it. And as time went thru I developed more skills until I took over
-                the whole department. The rest was history...
-            </p>
-        </div>
-    </section>
-
-
-    <!-- SERVICES SECTION -->
-    <section id="services-section" class="section services-section-skewed">
-        <div class="container text-center services-container services-section-padding">
-            <!-- <h1 class="section-title">Our Services</h1> -->
-            <img src="assets/img/title_img/services.png" alt="" class="section-img-title">
-            <div class="columns">
-                <div class="column">
-                    <img class="services-img" src="assets/img/services/photography2.svg" alt="">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-                    </p>
-                </div>
-                <div class="column">
-                    <img class="services-img" src="assets/img/services/videography2.svg" alt="">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-                    </p>
-                </div>
-                <div class="column">
-                    <img class="services-img" src="assets/img/services/reel2.svg" alt="">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- GALLERY/OUR WORK SECTION -->
+    <!-- GALLERY SECTION -->
+    <!-- class="colums is-gapless" removes the gaps between each div -->
     <section id="gallery-section" class="section">
-        <div class="container text-center gallery-services-padding">
-            <!-- <h1 class="section-title">Some of our work!</h1> -->
-            <img loading="lazy" src="assets/img/title_img/work.png" alt="" class="section-img-title">
-            <h2 class="section-text">Have a look at our
-                <a href="gallery.html" class="gal-link">Gallery page</a> for more!
-            </h2>
-        </div>
+        <!-- Row 1 -->
         <div data-aos="fade" data-aos-duration="4000" class="columns">
             <div class="column">
                 <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/HQ7vNBekY-s">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/ford_ranger.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/ford_ranger.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -123,7 +66,7 @@
             <div class="column">
                 <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/n_rgzqWPRMk">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/tyga.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/tyga.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -132,7 +75,7 @@
             <div class="column">
                 <a class="venobox" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/hxXSiQeWAZ0">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/wbff.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/wbff.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -146,7 +89,7 @@
                 <a class="venobox" data-autoplay="true" data-vbtype="video"
                     href="https://www.youtube.com/watch?v=DsYoEIGpzCE">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/dance.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/dance.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -156,7 +99,7 @@
                 <a class="venobox" data-autoplay="true" data-vbtype="video"
                     href="https://www.youtube.com/watch?v=Va7GQ1ByhCk">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/benny_fit.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/benny_fit.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -166,7 +109,7 @@
                 <a class="venobox" data-autoplay="true" data-vbtype="video"
                     href="https://www.youtube.com/watch?v=NJXioJZYEV0">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/wedding.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/wedding.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -178,9 +121,111 @@
         <div data-aos="fade" data-aos-duration="4000" class="columns">
             <div class="column">
                 <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=TLebEZZPLb0">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/push_peak.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=WS2InXco194">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/embodiment_waterfall.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=_IjndAIA_Oo">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/beanbags_r_us.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Row 4 -->
+        <div data-aos="fade" data-aos-duration="4000" class="columns">
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=rCwRE8GzkWg">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/phresh_ink.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=1g89QOl6Vuc">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/wbff_show_aus.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=o0-tSXtPgU4">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/on_the_job_training.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Row 5 -->
+        <div data-aos="fade" data-aos-duration="4000" class="columns">
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=_8k0HxzHoLU">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/asdy_athlete.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=dMkPq-kTK9A">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/pain_pod.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    href="https://www.youtube.com/watch?v=2YDCY6dO0RE">
+                    <div class="video-gal-box">
+                        <img src="assets/img/yt_thumbnails/black_diamond_tint.jpg" alt="">
+                        <div class="overlay-effect"></div>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Row 6 -->
+        <div data-aos="fade" data-aos-duration="4000" class="columns">
+            <div class="column">
+                <a class="venobox" data-autoplay="true" data-vbtype="video"
                     href="https://www.youtube.com/watch?v=b1hZ64F-3cE">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/hattie_boydle.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/hattie_boydle.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -190,7 +235,7 @@
                 <a class="venobox" data-autoplay="true" data-vbtype="video"
                     href="https://www.youtube.com/watch?v=IWIkOi-YS64">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/instasmile.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/instasmile.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -200,7 +245,7 @@
                 <a class="venobox" data-autoplay="true" data-vbtype="video"
                     href="https://www.youtube.com/watch?v=-NF1NZJcHjU">
                     <div class="video-gal-box">
-                        <img loading="lazy" src="assets/img/yt_thumbnails/club.jpg" alt="">
+                        <img src="assets/img/yt_thumbnails/club.jpg" alt="">
                         <div class="overlay-effect"></div>
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -256,8 +301,7 @@
     <!-- FOOTER SECTION -->
     <section id="footer-section" class="section">
         <div class="container has-text-centered footer-content">
-            <img loading="lazy" class="footer-logo2" src="assets/img/VOS_text_logo.png" alt="">
-
+            <img class="footer-logo2" src="assets/img/VOS_text_logo.png" alt="">
             <div class="footer-wrapper">
                 <ul class="footer-quick-links">
                     <li>
@@ -302,28 +346,28 @@
         </h1>
     </div>
 
+
+
+
     <!-- Bootstrap & MD Bootstrap JS/jQuery Plugins -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-        integrity="sha512-+NqPlbbtM1QqiK8ZAo4Yrj2c4lNQoGv8P79DPtKzj++l5jnN39rHA/xsqn8zE9l0uSoxaCdrOgFs6yjyfbBxSg=="
-        crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/venobox.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="js/venobox.min.js" crossorigin="anonymous"></script>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
 
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
 
     <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script> -->
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
 
-    <!-- <script src="js/object-fit-video.js"></script> -->
+    <script src="js/object-fit-video.js"></script>
     <script src="js/app.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -355,13 +399,11 @@
 
     <!-- Creates a fade-in effect on page reload via div.preloader -->
     <script>
-        $(window).on('load', function () {
-            // $('.preloader').delay(400).fadeOut('slow');
-            setTimeout(() => {
-                $('.preloader').fadeOut('fast');
-            }, 400);
-        });
+        $(window).load(function () {
+            $('.preloader').delay(400).fadeOut('slow');
+        })
     </script>
+
 </body>
 
 </html>
